# alpha-trader-agent

./: .gitignore  ALPHA_TRADER_HANDOFF.md  DEPLOY.md  DESIGN.md  DEXTER_AGENT.md  DEXTER_GUIDE.md  DEXTER_HANDOFF.md  DEXTER_TOOLS.md  FLEET_ECONOMICS.md  FLEET_OPTIONS.md  HOW_IT_WORKS.md  MARKET_DATA_IMPLEMENTATION.md  MULTI_MODAL_EXECUTION_SUMMARY.md  README.md  STRATEGY_B_BLUEPRINT.md  agent_templates.yaml  brain_test.py  callback_server_https.py  cli.py  debug_positions.py  debug_positions2.py  debug_positions3.py  finish_schwab.py  manual_position_monitor.py  portfolio.py  premarket_runner.py  premarket_signals.py  pyproject.toml  reauth_schwab.py  requirements-full.txt  research.py  router.py  send_commands.py  send_guide.py  send_run_commands.py  test_new_integrations.py  test_premarket_reversal.py  trade_executor.py  tsla_monitor.py
ISSUES/: ZYNTH_UPGRADE_REMAINING.md
agents/: research_manager.py  risk_manager.py  sentiment_agent.py
capsules/: __init__.py  kalshi_macro_sensor.py  nq_session_trend.py  spy_qqq_liquidity_sweep.py  xauusd_macro_levels.py
certs/: localhost.cnf
config/: config.yaml  trading_params.yaml
dexter/: api.py  brief.py  engine.py  state.py  tui.py
docs/: TOPSTEP_POSTMORTEM_AND_FIXES.md
market_data/: cache.py  fetcher.py  streamer.py
models/: __init__.py  decision_schemas.py
python-gateway/: Dockerfile  README.md  pyproject.toml
scripts/: install.sh  package.sh  run.sh  schwab_auth.py  schwab_auth_server.py  start_daemon.sh
standalone/: __init__.py  config.py  health_check.py  main.py  orchestrator.py  requirements.txt  scheduler.py  unified_controller.py
strategies/: __init__.py  base.py  bollinger_reversion.py  confluence.py  data_feed.py  ema_cross.py  opening_range_breakout.py  registry.py  rsi_trend.py  vwap_trend.py
tests/: test_browser_agents.py  test_topstep.py  test_unified_router.py  test_zynth_upgrade.py
tools/: __init__.py  analysis.py  apexfutures.py  arbitrage.py  bb_vwap_reversal_scalper.py  betmgm.py  brain.py  circuit_breakers.py  credential_manager.py  oanda.py  (+37 more)
(+68 files in other folders)
