[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-trader"
version = "2.0.0"
description = "Autonomous multi-modal trading agent system with browser, desktop, and API execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alpha Trader Team"},
]
keywords = ["trading", "ai-agent", "browser-automation", "finance", "alpaca", "oanda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "apscheduler>=3.10.0",
    "browser-use>=0.12.0",
    "playwright>=1.40.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "oandapyV20>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
dexter = "cli:app"
alphatrader = "cli:app"

[project.urls]
Homepage = "https://github.com/alpha-trader/alpha-trader"
Documentation = "https://github.com/alpha-trader/alpha-trader#readme"
Issues = "https://github.com/alpha-trader/alpha-trader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "models*", "dexter*", "standalone*", "capsules*", "research*", "workflows*"]
exclude = ["tests*", "__pycache__*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
